tests/valid/01_basic.ml
int main() {
    int32 x = 0;

    for (int32 i = 0; i < 5; i++) {
        x += i;
    }

    print("sum = ", x);

    return 0;
}
