tests/invalid/25_shift_float_count.ml
int main() {
    int32 x = 1 << 2.5;

    return 0;
}
